tests/compile_fail/too_many_dims.rs
use siunit::alias_types;
use typenum::*;

alias_types! {
    pub Foo => ("doc", P1, P1, P1, P1, P1, P1, P1, P1),
}

fn main() {}
